ai-hermes-agent-kustomize/kustomization/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio-injection: enabled
    kubernetes.io/metadata.name: ai-hermes-agent
  name: ai-hermes-agent
