ai-hermes-agent-kustomize/kustomization/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ai-hermes-agent
  namespace: ai-hermes-agent
  annotations:
    traefik.ingress.kubernetes.io/service.sticky.cookie: "true"
    traefik.ingress.kubernetes.io/service.sticky.cookie.name: "__traefik_sticky"
    traefik.ingress.kubernetes.io/service.sticky.cookie.secure: "true"
spec:
  selector:
    app: ai-hermes-agent
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 8642
      targetPort: 8642
