ai-hermes-agent-kustomize/kustomization/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ai-hermes-agent
  namespace: ai-hermes-agent
spec:
  rules:
    - host: ai-hermes-agent.local
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: ai-hermes-agent
                port:
                  number: 8642
